--- a/Project_8/style.css
+++ b/Project_8/style.css
@@ -45,6 +45,7 @@ body {
 .back {
     background: #f1f1f1;
     transform: perspective(600px) rotateY(180deg);
+    font-size: 25px;
 }
 
 .back-content {
@@ -71,7 +72,14 @@ body {
 
 .sm a:hover {
     background: #2c3e50;
+    /* width: 40px; */
     color: white;
+    justify-content: center;
+    align-items: center;
+    
+    /* font-size: 25px; */
+    /* border-radius: 50%; */
+
 
 }
 
