--- a/Project_8/style.css
+++ b/Project_8/style.css
@@ -76,7 +76,7 @@ body {
     color: white;
     justify-content: center;
     align-items: center;
-    
+
     /* font-size: 25px; */
     /* border-radius: 50%; */
 
@@ -93,3 +93,11 @@ body {
     
 }
 
+
+h2:hover {
+    font-size: 50px;
+}
+
+span:hover {
+    font-size: 30px;
+}
